fix spacings

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -65,7 +65,7 @@ p {
   width: 100vw;
 }
 #wrapper {
-  position: absolute;
+  position: relative;
   top: 65px;
   width: 100vw;
   min-width: fit-content
@@ -123,8 +123,17 @@ button {
   position: relative;
   z-index: 2;
   width: 100%;
-  & img {
+  .banner-image {
     width: 100%;
+    background: url('./images/hero-image@2x.png');
+    background-size: cover;
+    height: 800px;
+    @media (max-width: map-get($breakpoints, 'lg')) {
+      height: 500px;
+    }
+    @media (max-width: map-get($breakpoints, 'sm')) {
+      height: 300px;
+    }
   }
 
   & ul {
